# Crowdfund

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Rakefile  astro.config.mjs  package-lock.json  package.json  render.yaml  stormkit.yaml
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Gemfile  config.ru  fly.toml  package-lock.json  package.json  server.js  server.rb  server.test.mjs
contract/: Cargo.toml
contract/src/: lib.rs
scripts/: deploy.cjs  deploy.rb  deploy_local_server.mjs  deploy_rocket.cjs  generate_deploy_xdr.cjs  generate_upload_xdr.cjs  init_rocket.cjs  initialize_campaign.rb  test_donate.cjs  wasm_b64.txt  wasm_b64_b64.txt
src/components/: TipJar.tsx  wasm_base64.ts
src/pages/: index.astro
